--- a/css/640.css
+++ b/css/640.css
@@ -256,6 +256,7 @@ textarea{
 	width: 49.9%;
 	padding-top: 20px;
 	padding-right: 0;
+	padding-bottom: 0;
 }
 .footer-col_left {
 	padding-right: 12px;
