--- a/css/all.css
+++ b/css/all.css
@@ -4338,22 +4338,27 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 /*custom page scroll end*/
 
 .browserupgrade {
-	margin: 0.2em 0;
+	margin: 0;
 	background: #ccc;
 	color: #000;
-	padding: 0.2em 0;
+	padding: 0.3em 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 199;
 }
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-/*@media print,
-(-o-min-device-pixel-ratio: 5/4),
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 120dpi){
-
-}*/
+.lt-ie9 body{
+	background: #fff !important;
+}
+.lt-ie9 .header,
+.lt-ie9 .sidebar,
+.lt-ie9 [class*="color-tape"],
+.lt-ie9 .wrapper,
+.lt-ie9 .footer,
+.lt-ie9 .popup{
+	display: none !important;
+}
 
 /* ==========================================================================
    Print styles
@@ -4390,6 +4395,10 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 	.logo>*{ display: none; }
 	.logo>img{ display: inline-block !important; }
 }
+
+/* ==========================================================================
+   Media Queries
+   ========================================================================== */
 
 /* ==========================================================================
    Individual Media Queries
