--- a/css/all.css
+++ b/css/all.css
@@ -2121,7 +2121,8 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 }
 .tab-controls li,
 .user-content .tab-controls li,
-.user-content .tab-controls li:first-child{
+.user-content .tab-controls li:first-child,
+.r-tabs .r-tabs-accordion-title{
 	display: inline-block;
 	vertical-align: top;
 	padding: 0 6px;
@@ -2130,6 +2131,11 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	line-height: 50px;
 
 	letter-spacing: normal;
+}
+.r-tabs .r-tabs-accordion-title{
+	display: none;
+	text-align: center;
+	padding: 0 0 30px;
 }
 .user-content .tab-controls li:before,
 .user-content .tab-controls li:first-child:before{
@@ -2641,6 +2647,8 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	width: 37px;
 	margin: -7px 0 0 -18px;
 	background: url(../img/swiper-arrows.png) no-repeat 0 0;
+	-webkit-background-size: 100%;
+	background-size: 100%;
 }
 .video-slider .swiper-button-prev,
 .video-slider .swiper-container-rtl .swiper-button-next{
@@ -4373,27 +4381,189 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 		box-shadow: none !important;
 		text-shadow: none !important;
 	}
+	html, body {
+		height: auto !important;
+		width: auto !important;
+		overflow: auto !important;
+	}
 	a, a:visited{ text-decoration: underline; }
 	a[href^=http]:after { content:" <" attr(href) "> "; }
 	a[href]:after{ content: " (" attr(href) ")"; }
 	abbr[title]:after{ content: " (" attr(title) ")"; }
-	a[href^="#"]:after, a[href^="javascript:"]:after{ content: ""; }
+	a[href^="#"]:after, a[href^="javascript:"]:after, a[href^="mailto:"]:after, a[href^="tel:"]:after, a[href^="fax:"]:after, a[href^="skype:"]:after{ content: ""; }
 	pre, blockquote{ border: 1px solid #999; page-break-inside: avoid; }
 	thead{ display: table-header-group; }
 	tr, img{ page-break-inside: avoid; }
 	img{ max-width: 100% !important; }
 	p, h2, h3{ orphans: 3; widows: 3; }
 	h2, h3{ page-break-after: avoid; }
-	.sidebar,
+	.header{
+		display: block !important;
+		height: auto !important;
+		max-height: none !important;
+		min-height: 0 !important;
+		position: relative !important;
+		left: auto !important;
+		top: auto !important;
+		right: auto !important;
+		bottom: auto !important;
+		padding: 0 !important;
+		margin: 0 0 30pt !important;
+	}
+	.sidebar{
+		visibility: hidden !important;
+		left: -9999px !important;
+		position: absolute !important;
+		overflow: visible !important;
+	}
+	/*.phone{
+		visibility: visible !important;
+		position: fixed !important;
+		right: 0 !important;
+		top: -10pt !important;
+		font-size: 10pt !important;
+		line-height: 1.3 !important;
+		max-width: 25% !important;
+		text-align: right !important;
+	}*/
 	.aside,
-	.print-hidden{ display: none !important; }
+	.print-hidden,
+	.logo,
+	.btn-menu,
+	.soc,
+	.view-print,
+	.footer-nav,
+	.screen,
+	.btn-default,
+	.aaa{
+		display: none !important;
+	}
+	.layout{
+		padding: 0 !important;
+		margin: 0 !important;
+	}
+	.max-wrap{
+		padding: 0 !important;
+	}
+	.full-width{
+		margin-left: 0 !important;
+		padding-left: 0 !important;
+		padding-right: 0 !important;
+	}
+	.logo__print {
+		display: inline-block !important;
+		margin: 0 20pt 0 0 !important;
+	}
+	.header .logo__slogan{
+		display: inline-block !important;
+		padding: 25pt 0 0 !important;
+	}
+	.header,
+	.main{
+		-webkit-transform: none !important;
+		-ms-transform: none !important;
+		transform: none !important;
+	}
 	.content{
 		margin-left: 0 !important;
 		margin-right: 0 !important;
 	}
-	.logo{ background: none !important; }
-	.logo>*{ display: none; }
-	.logo>img{ display: inline-block !important; }
+	table,
+	table td,
+	table th{
+		border: 1px solid #000 !important;
+	}
+	.imgl,
+	.imgr{
+		float: none !important;
+		margin-right: 0 !important;
+		margin-left: 0 !important;
+	}
+	.footer-holder{
+		padding: 0 !important;
+		text-align: left !important;
+	}
+	.footer-holder:after{
+		content: none !important;
+	}
+	.footer-col{
+		padding: 0 10pt 0 0 !important;
+		display: inline !important;
+	}
+	.developer{
+		display: none !important;
+	}
+	.tab-controls{
+		display: none !important;
+	}
+	.r-tabs .r-tabs-accordion-title,
+	.r-tabs .r-tabs-panel{
+		display: block !important;
+	}
+	.r-tabs .r-tabs-accordion-title a{
+		text-decoration: none;
+	}
+	.products__item {
+		float: none !important;
+		display: inline-block !important;
+		vertical-align: top !important;
+		width: 45% !important;
+		margin-right: 2% !important;
+		margin-bottom: 2% !important;
+		border: 1px solid #000 !important;
+	}
+	.video-section{
+		display: none !important;
+	}
+	.previews__item {
+		float: none !important;
+		display: inline-block !important;
+		vertical-align: top !important;
+		width: 100% !important;
+		margin-bottom: 2% !important;
+		border: none !important;
+	}
+	.previews__item, .previews__item:before{
+		content: none !important;
+	}
+	.previews__inner{
+		height: auto !important;
+	}
+	.previews__item_lg .previews__inner{
+		white-space: normal !important;
+	}
+	.previews__item_lg .previews__img {
+		 width: auto !important;
+		 height: auto !important;
+		 margin-right: 0 !important;
+	}
+	.previews__item_lg .previews__img:after{
+		content: none !important;
+	}
+	.previews__item_lg .previews__img img {
+		min-height: 0 !important;
+		min-width: 0 !important;
+		max-width: 100% !important;
+		position: relative !important;
+		left: auto !important;
+		top: auto !important;
+		-webkit-transform: none !important;
+		-ms-transform: none !important;
+		transform: none !important;
+	}
+	.previews__item_lg .previews__title{
+		font-family: 'rotondac-bold', Arial, Helvetica, sans-serif !important;
+		font-size: 24px !important;
+		line-height: 30px !important;
+		text-transform: none !important;
+		padding: 0 0 20px !important;
+	}
+	.previews__item_lg .previews__title,
+	.previews__item_lg .previews__text{
+		color: #000 !important;
+		max-height: none !important;
+		text-align: left !important;
+	}
 }
 
 /* ==========================================================================
