--- a/css/640.css
+++ b/css/640.css
@@ -173,9 +173,12 @@ textarea{
 	width: 100%;
 	height: 100%;
 	border: none;
-	overflow: auto;
 	background: #fff;
 	z-index: 102;
+}
+.filters__panel{
+	height: 100%;
+	overflow: auto;
 }
 .filters,
 .header-show .filters {
