--- a/css/980.css
+++ b/css/980.css
@@ -74,6 +74,7 @@
 .hide-screen .sidebar{
 	display: none;
 }
+.sidebar__holder { border-top: 1px solid #029db5; }
 .sidebar .logo{
 	display: none;
 }
