--- a/css/640.css
+++ b/css/640.css
@@ -161,6 +161,9 @@ textarea{
 .filters-opener{
 	display: block;
 }
+.popup-show .filters-opener{
+	display: none;
+}
 .header-show .filters-opener{
 	-webkit-transform: translate(0, 86px);
 	-ms-transform: translate(0, 86px);
