--- a/css/all.css
+++ b/css/all.css
@@ -212,12 +212,12 @@ button{
 .btn-close:after{
 	content: '';
 	position: absolute;
-	left: 3px;
+	left: 0;
 	top: 50%;
-	margin: -2px 0 0;
-	height: 4px;
-	width: 24px;
-	border-radius: 4px;
+	margin: -3px 0 0;
+	height: 6px;
+	width: 30px;
+	border-radius: 5px;
 	background: #00abc7;
 }
 .btn-close:before{
@@ -2858,6 +2858,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	box-sizing: border-box;
 	background: #fff;
 }
+.contacts-print{ display: none; }
 .locate-tabs{
 	position: relative;
 	box-sizing: border-box;
@@ -4398,7 +4399,7 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 	tr, img{ page-break-inside: avoid; }
 	img{ max-width: 100% !important; }
 	p, h2, h3{ orphans: 3; widows: 3; }
-	h2, h3{ page-break-after: avoid; }
+	h1, h2, h3, h4{ page-break-after: avoid; }
 	.header{
 		display: block !important;
 		height: auto !important;
@@ -4418,16 +4419,6 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 		position: absolute !important;
 		overflow: visible !important;
 	}
-	/*.phone{
-		visibility: visible !important;
-		position: fixed !important;
-		right: 0 !important;
-		top: -10pt !important;
-		font-size: 10pt !important;
-		line-height: 1.3 !important;
-		max-width: 25% !important;
-		text-align: right !important;
-	}*/
 	.aside,
 	.print-hidden,
 	.logo,
@@ -4470,17 +4461,55 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 		margin-left: 0 !important;
 		margin-right: 0 !important;
 	}
+	.section-title{
+		padding: 0 0 20px !important;
+	}
+	/*table*/
 	table,
 	table td,
 	table th{
 		border: 1px solid #000 !important;
 	}
+	/*table end*/
+	/*img*/
 	.imgl,
 	.imgr{
 		float: none !important;
 		margin-right: 0 !important;
 		margin-left: 0 !important;
 	}
+	/*img end*/
+	/*form*/
+	input, select, textarea{
+		display: block !important;
+		border: 1px solid #000 !important;
+		border-radius: 0 !important;
+		padding: 5px !important;
+		text-align: left !important;
+		height: auto !important;
+		background: none !important;
+		color: #000 !important;
+		line-height: 1.2 !important;
+	}
+	input[type="submit"],
+	input[type="button"],
+	button{
+		display: none !important;
+	}
+	input[type="checkbox"],
+	input[type="radio"]{
+		display: inline !important;
+		vertical-align: top !important;
+	}
+	input[type="checkbox"] + label, input[type="radio"] + label{
+		display: inline !important;
+		vertical-align: top !important;
+	}
+	input[type="checkbox"] + label>span, input[type="radio"] + label>span{
+		padding: 0 !important;
+	}
+	/*form end*/
+	/*main blocks*/
 	.footer-holder{
 		padding: 0 !important;
 		text-align: left !important;
@@ -4495,35 +4524,68 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 	.developer{
 		display: none !important;
 	}
+	/*main blocks end*/
+	/*home page*/
 	.tab-controls{
 		display: none !important;
 	}
 	.r-tabs .r-tabs-accordion-title,
 	.r-tabs .r-tabs-panel{
 		display: block !important;
+		float: none !important;
+		position: static !important;
+		overflow: visible !important;
+	}
+	.r-tabs .r-tabs-panel{
+		page-break-after: always;
 	}
 	.r-tabs .r-tabs-accordion-title a{
 		text-decoration: none;
 	}
-	.products__item {
+	.products__list{
+		display: block !important;
+		width: 100% !important;
+	}
+	.products__item{
 		float: none !important;
-		display: inline-block !important;
-		vertical-align: top !important;
-		width: 45% !important;
-		margin-right: 2% !important;
-		margin-bottom: 2% !important;
-		border: 1px solid #000 !important;
+		display: block !important;
+		width: 100% !important;
+		max-width: none !important;
+		min-width: 0 !important;
+		margin: 0 !important;
+		padding: 0 0 20px !important;
+		border: none !important;
+	}
+	.products__inner{
+		padding: 0 !important;
+		page-break-inside: avoid;
+	}
+	.products__img,
+	.products__content{
+		width: 100% !important;
+		max-width: none !important;
+		min-width: 0 !important;
+		text-align: left !important;
+		height: auto !important;
+	}
+	.products__img img{
+		width: auto !important;
+		max-width: none !important;
+		min-width: 0 !important;
+	}
+	.products__param dt{
+		font-style: italic !important;
 	}
 	.video-section{
 		display: none !important;
 	}
 	.previews__item {
 		float: none !important;
-		display: inline-block !important;
-		vertical-align: top !important;
+		display: block !important;
 		width: 100% !important;
-		margin-bottom: 2% !important;
+		margin-bottom: 0 !important;
 		border: none !important;
+		padding: 0 0 50px !important;
 	}
 	.previews__item, .previews__item:before{
 		content: none !important;
@@ -4535,9 +4597,11 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 		white-space: normal !important;
 	}
 	.previews__item_lg .previews__img {
-		 width: auto !important;
-		 height: auto !important;
-		 margin-right: 0 !important;
+		width: auto !important;
+		height: auto !important;
+	}
+	.previews__img{
+		margin: 0 0 20px !important;
 	}
 	.previews__item_lg .previews__img:after{
 		content: none !important;
@@ -4553,6 +4617,10 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 		-ms-transform: none !important;
 		transform: none !important;
 	}
+	.previews__content{
+		display: block !important;
+		padding: 0 !important;
+	}
 	.previews__item_lg .previews__title{
 		font-family: 'rotondac-bold', Arial, Helvetica, sans-serif !important;
 		font-size: 24px !important;
@@ -4566,6 +4634,107 @@ body.mCS_disabled > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.mCS_y
 		max-height: none !important;
 		text-align: left !important;
 	}
+	/*home page end*/
+	/*contacts page*/
+	.contacts__holder {
+		float: none !important;
+	}
+	.contacts__frame {
+		margin: 0 !important;
+		min-height: 0 !important;
+	}
+	.locate {
+		height: auto !important;
+		min-height: 0 !important;
+		background: none !important;
+		padding: 0 !important;
+	}
+	.local-map {
+		position: relative !important;
+		left: auto !important;
+		top: auto !important;
+		opacity: 1 !important;
+		visibility: visible !important;
+		height: 400px !important;
+		width: 100% !important;
+		-webkit-transform: scale(1) !important;
+		-ms-transform: scale(1) !important;
+		transform: scale(1) !important;
+
+		display: none !important;
+	}
+	.locate-bg__item,
+	.locate-controls,
+	.see-map{
+		display: none !important;
+	}
+	.locate-tabs{
+		display: none !important;
+	}
+	.locate-adr {
+		padding: 0 0 20px !important;
+	}
+	.contacts-print{
+		display: block !important;
+		padding: 0 0 50px !important;
+	}
+	.contacts-print h3{
+		padding: 0 0 30px;
+	}
+	.contacts-print .locate-adr__item,
+	.contacts-print .locate-cont__item {
+		display: block !important;
+		opacity: 1 !important;
+		visibility: visible !important;
+		-webkit-transform: translateX(0) !important;
+		-ms-transform: translateX(0) !important;
+		transform: translateX(0) !important;
+		margin: 0 !important;
+		font-size: 18px !important;
+		line-height: 1.5 !important;
+	}
+	.contacts-print .locate-cont{
+		padding: 0 !important;
+	}
+	.contacts-print .locate-cont__item .locate__tel + dd {
+		font-size: 18px !important;
+		line-height: 1.5 !important;
+	}
+	.contacts-aside {
+		display: none !important;
+	}
+	/*contacts page end*/
+	/*news page*/
+	.news__img {
+		float: none !important;
+		width: auto !important;
+		max-width: none !important;
+		margin: 20px !important;
+	}
+	.news__content {
+		padding: 0 !important;
+	}
+	.news__share{
+		display: none !important;
+	}
+	.load-more{
+		display: none !important;
+	}
+	/*news page end*/
+	/*products page*/
+	.filters{
+		display: none !important;
+	}
+	.products__list{
+		position: static !important;
+		height: auto !important;
+	}
+	.products__item{
+		position: relative !important;
+		left: auto !important;
+		top: auto !important;
+	}
+	/*products page end*/
 }
 
 /* ==========================================================================
